# sketch-n-solve

./: .gitignore  README.md  pyproject.toml
demos/: getting_started.py
presentation/: ds592.key
src/sketch_n_solve/metrics/: __init__.py  least_squares.py
src/sketch_n_solve/sketch/: __init__.py  dense.py  sparse.py
src/sketch_n_solve/solve/: __init__.py  least_squares.py
src/sketch_n_solve/solve/least_squares/: __init__.py  algorithms.py  utils.py
src/sketch_n_solve/utils/: __init__.py  least_squares.py
tools/: benchmark.py  demo.py  main.py  metadata.pkl  metrics.pkl  prepare_data.py  visualize_benchmark.py  visualize_benchmark_1.py  visualize_benchmark_2.py
